# sregpt

./: LICENSE  README.md  pyproject.toml
sre_gpt/: cli.py
sregpt/: cli.py
