[project]
name = "sre-gpt"
version = "0.1.0"
description = "CLI AI assistant for SRE / sysadmin tasks"
authors = [
  { name = "You", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30",
    "typer[all]",
    "rich>=13.0",
    "pyyaml",
]

[project.scripts]
sregpt = "sre_gpt.cli:app"
