[project]
name = "sregpt"                               # ← project & wheel name
version = "0.1.0"
description = "CLI AI assistant for SRE / sysadmin tasks"
authors = [{ name = "William Quinones", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "openai>=1.30",
  "typer>=0.12",          # CLI framework
  "rich>=13.0",           # pretty console output
  "pyyaml",               # config file handling
]

[project.scripts]
sregpt = "sregpt.cli:app"                     # ← console-script stub

# ─────────────────────────────────────────────
# build metadata (needed for pip/PyPI wheels)
# ─────────────────────────────────────────────
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ensure the sregpt package is included in the wheel
[tool.setuptools.packages.find]
where = ["."]
include = ["sregpt*"]
